stop animation and add gitignore

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -31,8 +31,9 @@
 
 				renderer.render( scene, camera );
 			};
-
-			animate();
+			
+			renderer.render( scene, camera );
+			// animate();
 		</script>
 	</body>
 </html>
