update code to remove warning

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -18,42 +18,42 @@
 			document.body.appendChild( renderer.domElement );
 
 			var containerGeometry = new THREE.BoxGeometry( 5, 2, 2 );
-			var materialArray = [];
-			materialArray.push(new THREE.MeshBasicMaterial({
+			var containerMaterial = [];
+			containerMaterial.push(new THREE.MeshBasicMaterial({
 				opacity:0,
 				color:0x00cccc,
 				transparent: true
 			}));
-			materialArray.push(new THREE.MeshBasicMaterial({
+			containerMaterial.push(new THREE.MeshBasicMaterial({
 				opacity:0.5,
 				color:0xcc00cc,
-				transparent: true
+				transparent: false
 			}));
-			materialArray.push(new THREE.MeshBasicMaterial({
+			containerMaterial.push(new THREE.MeshBasicMaterial({
 				opacity:0,
 				color:0xcccc00,
 				transparent: true
 			}));
-			materialArray.push(new THREE.MeshBasicMaterial({
+			containerMaterial.push(new THREE.MeshBasicMaterial({
 				opacity:0.5,
 				color:0xffcccc,
-				transparent: true
+				transparent: false
 			}));
-			materialArray.push(new THREE.MeshBasicMaterial({
+			containerMaterial.push(new THREE.MeshBasicMaterial({
 				opacity:0,
 				color:0xccffcc,
 			transparent: true
 			}));
-			materialArray.push(new THREE.MeshBasicMaterial({
-				opacity:0.5,
+			containerMaterial.push(new THREE.MeshBasicMaterial({
+				opacity:1,
 				color:0xccccff,
-				transparent: true
+				transparent: false
 			}));
-			var containerMaterial = new THREE.MeshFaceMaterial(materialArray);
 			// var containerMaterial = new THREE.MeshBasicMaterial( { color: 0xcccccc } );
 			var containerEdges = new THREE.EdgesGeometry( containerGeometry );
 			var containerLine = new THREE.LineSegments( containerEdges, new THREE.LineBasicMaterial( { color: 0x111111 } ) );
 			var containerCube = new THREE.Mesh( containerGeometry, containerMaterial );
+			debugger;
 			scene.add( containerCube );
 			scene.add( containerLine );
 
