--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<script src="js/three.js"></script>
+		<script src="js/OrbitControls.js"></script>
 		<script>
 			var scene = new THREE.Scene();
 			scene.background = new THREE.Color(0x808080);
@@ -17,37 +18,43 @@
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
 
-			var containerGeometry = new THREE.BoxGeometry( 5, 2, 2 );
+			var containerGeometry = new THREE.BoxGeometry( 20, 8, 8 );
 			var containerMaterial = [];
-			containerMaterial.push(new THREE.MeshBasicMaterial({
+			containerMaterial.push(new THREE.MeshPhongMaterial({
 				opacity:0,
-				color:0x00cccc,
-				transparent: true
+				// color:0xaaaaaa,
+				transparent: true,
+				side: THREE.DoubleSide
 			}));
-			containerMaterial.push(new THREE.MeshBasicMaterial({
-				opacity:0.5,
-				color:0xcc00cc,
-				transparent: false
+			containerMaterial.push(new THREE.MeshPhongMaterial({
+				opacity:0.7,
+				color:0xaaaaaa,
+				transparent: true,
+				side: THREE.DoubleSide
 			}));
-			containerMaterial.push(new THREE.MeshBasicMaterial({
+			containerMaterial.push(new THREE.MeshPhongMaterial({
 				opacity:0,
-				color:0xcccc00,
-				transparent: true
+				// color:0xaaaaaa,
+				transparent: true,
+				side: THREE.DoubleSide
 			}));
-			containerMaterial.push(new THREE.MeshBasicMaterial({
-				opacity:0.5,
-				color:0xffcccc,
-				transparent: false
+			containerMaterial.push(new THREE.MeshPhongMaterial({
+				opacity:0.7,
+				color:0xaaaaaa,
+				transparent: true,
+				side: THREE.DoubleSide
 			}));
-			containerMaterial.push(new THREE.MeshBasicMaterial({
+			containerMaterial.push(new THREE.MeshPhongMaterial({
 				opacity:0,
-				color:0xccffcc,
-			transparent: true
+				// color:0xaaaaaa,
+				transparent: true,
+				side: THREE.DoubleSide
 			}));
-			containerMaterial.push(new THREE.MeshBasicMaterial({
-				opacity:1,
-				color:0xccccff,
-				transparent: false
+			containerMaterial.push(new THREE.MeshPhongMaterial({
+				opacity:0.7,
+				color:0xaaaaaa,
+				transparent: true,
+				side: THREE.DoubleSide
 			}));
 			// var containerMaterial = new THREE.MeshBasicMaterial( { color: 0xcccccc } );
 			var containerEdges = new THREE.EdgesGeometry( containerGeometry );
@@ -57,25 +64,54 @@
 			scene.add( containerCube );
 			scene.add( containerLine );
 
-			containerCube.rotation.x += 0.5;
-			containerCube.rotation.y -= 0.75;
-			containerLine.rotation.x += 0.5;
-			containerLine.rotation.y -= 0.75;
+			// directional
+			// var light = new THREE.DirectionalLight( 0xffffff );
+			// light.position.set( 1, 1, 1 );
+			// scene.add( light );
 
+			// // ambient
+			// var ambient = new THREE.AmbientLight( 0x222222 );
+    		// scene.add( ambient );
+
+			// containerCube.rotation.x += 0.5;
+			// containerCube.rotation.y -= 0.75;
+			// containerLine.rotation.x += 0.5;
+			// containerLine.rotation.y -= 0.75;
 
 			camera.position.z = 5;
 
-			var animate = function () {
+			var controls = new THREE.OrbitControls( camera, renderer.domElement );
+			//controls.addEventListener( 'change', render ); // call this only in static scenes (i.e., if there is no animation loop)
+			controls.enableDamping = true; // an animation loop is required when either damping or auto-rotation are enabled
+			controls.dampingFactor = 0.05;
+			controls.screenSpacePanning = false;
+			controls.minDistance = 20;
+			controls.maxDistance = 40;
+			controls.maxPolarAngle = Math.PI / 2;
+
+			renderer.render( scene, camera );
+			animate();
+
+			window.addEventListener( 'resize', onWindowResize, false );
+
+			function onWindowResize() {
+				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.updateProjectionMatrix();
+				renderer.setSize( window.innerWidth, window.innerHeight );
+			}
+
+			function animate() {
 				requestAnimationFrame( animate );
 
-				cube.rotation.x += 0.01;
-				cube.rotation.y += 0.01;
+				// containerCube.rotation.x += 0.01;
+				// containerCube.rotation.y += 0.01;
+				// containerLine.rotation.x += 0.01;
+				// containerLine.rotation.y += 0.01;
+
+				controls.update();
 
 				renderer.render( scene, camera );
 			};
-
-			renderer.render( scene, camera );
-			// animate();
 		</script>
 	</body>
 </html>
