--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -64,6 +64,22 @@
 			scene.add( containerCube );
 			scene.add( containerLine );
 
+
+			var boxType1Geometry = new THREE.BoxGeometry( 2, 1, 1 );
+			var boxType1Material = new THREE.MeshBasicMaterial( { color: 0x00ffff } );
+			var boxType1Cube = new THREE.Mesh( boxType1Geometry, boxType1Material );
+			scene.add(boxType1Cube);
+
+			var boxType2Geometry = new THREE.BoxGeometry( 4, 2, 1 );
+			var boxType2Material = new THREE.MeshBasicMaterial( { color: 0xff00ff } );
+			var boxType2Cube = new THREE.Mesh( boxType2Geometry, boxType2Material );
+			scene.add(boxType2Cube);
+
+			// var boxType1Geometry = new THREE.BoxGeometry( 2, 1, 1 );
+			// var boxType1Material = new THREE.MeshBasicMaterial( { color: 0x00ffff } );
+			// var boxType1Cube = new THREE.Mesh( boxType1Geometry, boxType1Material );
+			// scene.add(boxType1Cube);
+
 			// directional
 			var light = new THREE.DirectionalLight( 0xffffff );
 			light.position.set( 1, 1, 1 );
