--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Container Spotter Example</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
