--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -1,24 +1,34 @@
 <html>
 	<head>
 		<title>Container Spotter Example</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"> -->
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
 		</style>
 	</head>
 	<body>
+
+		<div class="row">
+				<div id="controller" class="col-md-3">
+
+				</div>
+		
+				<div id="view" class="col-md-9"></div>
+		</div>
+
 		<script src="js/three.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src="js/spotterLogic.js"></script>
 		<script>
 			var scene = new THREE.Scene();
 			scene.background = new THREE.Color(0x808080);
-			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
-
 			var renderer = new THREE.WebGLRenderer();
 			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
+			var viewContainer = document.getElementById('view');
+			viewContainer.appendChild( renderer.domElement );
+			var camera = new THREE.PerspectiveCamera( 75, viewContainer.offsetWidth/viewContainer.offsetHeight, 0.1, 1000 );
 
 			const containerGeometryX = 20;
 			const containerGeometryY = 10;
@@ -114,11 +124,11 @@
 
 			window.addEventListener( 'resize', onWindowResize, false );
 			window.addEventListener( 'mousemove', onMouseMove, false );
-
+			onWindowResize();
 			function onWindowResize() {
-				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.aspect = viewContainer.offsetWidth / viewContainer.offsetHeight;
 				camera.updateProjectionMatrix();
-				renderer.setSize( window.innerWidth, window.innerHeight );
+				renderer.setSize( viewContainer.offsetWidth, viewContainer.offsetHeight );
 			}
 
 			function onMouseMove( event ) {
