--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -2,14 +2,15 @@
 	<head>
 		<title>Container Spotter Example</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/style.css">
 		<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"> -->
 		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
+			
 		</style>
 	</head>
 	<body>
 
+		<div id="hideController" class="toggle-controller">X</div>
 		<div class="row">
 				<div id="controller" class="col-md-3">
 
@@ -25,8 +26,8 @@
 			var scene = new THREE.Scene();
 			scene.background = new THREE.Color(0x808080);
 			var renderer = new THREE.WebGLRenderer();
-			renderer.setSize( window.innerWidth, window.innerHeight );
 			var viewContainer = document.getElementById('view');
+			renderer.setSize( viewContainer.offsetWidth, viewContainer.offsetHeight );
 			viewContainer.appendChild( renderer.domElement );
 			var camera = new THREE.PerspectiveCamera( 75, viewContainer.offsetWidth/viewContainer.offsetHeight, 0.1, 1000 );
 
@@ -123,8 +124,8 @@
 			animate();
 
 			window.addEventListener( 'resize', onWindowResize, false );
-			window.addEventListener( 'mousemove', onMouseMove, false );
-			onWindowResize();
+			viewContainer.addEventListener( 'mousemove', onMouseMove, false );
+			// onWindowResize();
 			function onWindowResize() {
 				camera.aspect = viewContainer.offsetWidth / viewContainer.offsetHeight;
 				camera.updateProjectionMatrix();
