fix raycasting issue
this issue was caused since we changed canvas width

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -125,7 +125,7 @@
 
 			window.addEventListener( 'resize', onWindowResize, false );
 			viewContainer.addEventListener( 'mousemove', onMouseMove, false );
-			// onWindowResize();
+
 			function onWindowResize() {
 				camera.aspect = viewContainer.offsetWidth / viewContainer.offsetHeight;
 				camera.updateProjectionMatrix();
@@ -137,8 +137,8 @@
 				// calculate mouse position in normalized device coordinates
 				// (-1 to +1) for both components
 
-				mouse.x = ( event.clientX / window.innerWidth ) * 2 - 1;
-				mouse.y = - ( event.clientY / window.innerHeight ) * 2 + 1;
+				mouse.x = ( ( event.clientX - viewContainer.offsetLeft ) / viewContainer.clientWidth ) * 2 - 1;
+				mouse.y = - ( ( event.clientY - viewContainer.offsetTop ) / viewContainer.clientHeight ) * 2 + 1;
 
 			}
 			var INTERSECTED;
