reset pivots when packing items

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -202,6 +202,12 @@
 					}
 					cubes = [];
 					packedItems = [];
+					pivots = [{
+						xCoordinate: 0,
+						yCoordinate: 0,
+						zCoordinate: 0,
+						origin: true
+					}];
 				}
 
 				packItems();
