save space on large screens

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -18,12 +18,20 @@
 
 						<h4>Bin Dimensions</h5>
 						<div class="form-group">
-							<label for="binXCoordinate">Bin Length</label>
-							<input type="number" class="form-control" name="binXCoordinate" id="binXCoordinate">
-							<label for="binYCoordinate">Bin Width</label>
-							<input type="number" class="form-control" name="binYCoordinate" id="binYCoordinate">
-							<label for="binZCoordinate">Bin Height</label>
-							<input type="number" class="form-control" name="binZCoordinate" id="binZCoordinate">
+							<div class="row">
+								<div class="col-lg-4 container-spotter-input-label-block">
+									<label for="binXCoordinate">Length</label>
+									<input type="number" class="form-control" name="binXCoordinate" id="binXCoordinate">
+								</div>
+								<div class="col-lg-4 container-spotter-input-label-block">
+									<label for="binYCoordinate">Width</label>
+									<input type="number" class="form-control" name="binYCoordinate" id="binYCoordinate">
+								</div>
+								<div class="col-lg-4 container-spotter-input-label-block">
+									<label for="binZCoordinate">Height</label>
+									<input type="number" class="form-control" name="binZCoordinate" id="binZCoordinate">
+								</div>
+							</div>
 						</div>
 						<h4>Item Dimensions</h4>
 
