add button to add item

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -33,9 +33,9 @@
 								</div>
 							</div>
 						</div>
-						<h4>Item Dimensions</h4>
-
-						<hr>
+						<h4 class="display-inline-block">Item Dimensions</h4>
+						<button class="btn btn-primary container-spotter-add-item-button">&#43;</button>
+						<hr class="container-spotter-basic-hr">
 						<button class="btn btn-primary" onclick="renderItems()">Pack</button>
 					</div>
 				</div>
