add addItemBlock function

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -192,6 +192,10 @@
 				renderer.render( scene, camera );
 			};
 
+			function addItemBlock() {
+				// TODO: implement this function
+			}
+
 			var cubes = [];
 			function renderItems() {
 
