--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -15,8 +15,9 @@
 				<div id="controller" class="col-md-3 container-spotter-no-padding-div container">
 					<div class="container-spotter-content-div">
 						<h3>Container Spotter</h3>
-
+						<hr class="container-spotter-basic-hr">
 						<h4>Bin Dimensions</h5>
+						<hr class="container-spotter-basic-hr">
 						<div class="form-group">
 							<div class="row">
 								<div class="col-lg-4 container-spotter-input-label-block">
@@ -33,8 +34,8 @@
 								</div>
 							</div>
 						</div>
-						<h4 class="display-inline-block">Item Dimensions</h4>
-						<button class="btn btn-primary container-spotter-add-item-button">&#43;</button>
+						<h4 class="display-inline-block">Item Details</h4>
+						<button class="btn btn-primary container-spotter-add-item-button" title="Add item">&#43;</button>
 						<hr class="container-spotter-basic-hr">
 						<button class="btn btn-primary" onclick="renderItems()">Pack</button>
 					</div>
